FEED corrected the too wide layout.

--- a/Comments/static/Comments/comments.css
+++ b/Comments/static/Comments/comments.css
@@ -358,7 +358,7 @@
 
 #comments_column_1 {
 	float:left;
-    width: 680px;
+    width: 580px;
     overflow: auto;
 	margin-left:1em;
 	margin-top:2em;
@@ -366,16 +366,20 @@
 
 #info_column {
 	float:left;
-	width:450px;
+	width:330px;
 	margin-top:2em;
 	margin-left:1em;
 	padding-left:1em;
 	border-left:1px dashed silver;
 }
 
+#info_column p {
+	font-size:14px;
+}
+
 #comments_column_2 {
     float: left;
-    width: 680px;
+    width: 580px;
     margin-left: 30px;
 }
 
