--- a/static/css/base.css
+++ b/static/css/base.css
@@ -462,11 +462,11 @@ button {
 }
 
 .month {
-	width:50px;
+	width:60px;
 }
 
 .day {
-	width:30px;
+	width:40px;
 	text-align:right;
 }
 
